[package]
name = "playt"
version = "0.1.0"
edition = "2021"
description = "Playt is a game library for the terminal"
readme = "README.md"
license = "MIT"
keywords = ["gamedev", "game", "terminal"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "playt"
crate-type = ["lib"]

[dependencies]
pancurses = "0.17"

[features]
default = ["wide"]
wide = ["pancurses/wide"]
